# FreerDPS

./: .Makefile.rocq.d  .gitignore  Makefile  Makefile.rocq  Makefile.rocq.conf  README.md  _CoqProject  coq-FreerDPS.opam  doc.md  dune-project  freerdps.opam  graph.f  meta.yml  proba.md
.github/workflows/: docker-action.yml
examples/: airlock.v  airlock_helper.v  my_airlock.v  ping.v  ping_monad.v  ping_plain.v  ping_prob.v  pinger.v  please_free_me_from_the_ping.v  prob_airlock.v  store_product.v  yet_another_ping.v
examples/2pc/: interfaces.v  interfaces_n_clients.v  two_phase_commit.v
examples/equational_reasoning/: freer_choice.v  freer_lossy_round_trip.v  test.v
examples/ping/: interfaces.v  interfaces_lossy_round_trip_impure.v  lossy_round_trip.v  lossy_round_trip_impure.v  lossy_round_trip_impure_semantics.v  lossy_round_trip_slides.v
freer_playground/: _CoqProject
freer_playground/theories/: FlipMonad.v  FreerMonad.v  LossyRoundTripFlip.v
freer_playground/theories/lib/: AbstractFreerCoproduct.v  ActoFreerCoproduct.v  FreerFlip.v
theories/: Component.v  Contract.v  Contract_monae_redesign.v  Core.v  Effect.v  FlipMonad.v  Freer.v  FreerMonad.v  Hoare.v  HoareFacts.v  HoareLib.v  Hoare_help.v  Impure.v  Init.v  Instrument.v  Interface.v  OldInterface.v  ProbInterface.v  Semantics.v  Tactics.v  Typeclasses.v  dune  mathcomp_extra.v
theories/freer_impls/: FreerCoproduct.v
theories/freer_lib/: ActoFreerCoproduct.v  FreerFlip.v
